--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!--Reference: https://tailwindcomponents.com/component/page-layout-responsive-->>
+<!--Reference: https://tailwindcomponents.com/component/page-layout-responsive-->
 <!doctype html>
 <html lang="en">
 <head>
